Edit index.html layout, fix spacing in recipes

--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,58 @@
 * {
-  background-color: antiquewhite;
+  background-color:gainsboro;
   color:saddlebrown;
+  line-height: 1.5;
 }
 
 .container {
   text-align: center;
   margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
   width: 750px;
 }
 
 img {
   width: 500px;
   border-radius: 20px;
+  opacity: 90%;
+}
+
+h2,
+ul,
+ol {
+  margin-bottom: 0px;
 }
 
 ul,
 ol {
   display: inline-block;
   text-align: left;
+  margin-top: 5px;
+}
+
+li {
+  margin-bottom: 10px;
+}
+
+.description {
+  margin-top: 5px;
+}
+
+.menu {
+  list-style-type: none;
+  margin-top: 30px;
+}
+
+.menu img {
+  width: 150px;
+  height: 150px;
+  object-fit:cover;
+}
+
+.menu li {
+  display:inline-block;
+  vertical-align: text-top;
+  width: 150px;
+  margin-left: 50px;
 }
